--- a/_pages/index/_application-process.html
+++ b/_pages/index/_application-process.html
@@ -7,7 +7,7 @@
 
         <div class="row process">
             <div class="col-xs-12 col-sm-6 col-md-3">
-                <a href="https://www.surveymonkey.com/r/ZN3BP3V" target="_blank">
+                <a href="{{ site.application }}" target="_blank">
                     <img src="{{ site.baseurl }}/assets/images/icons/Application.png"
                          alt=""
                          style="height: 85px; width: 85px; margin-top: 15px;" />
