--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -3,9 +3,9 @@ layout: jumbotron-header
 permalink: /
 jumbotron:
   text: >
-    ## Summer 2018
+    ## Summer 2019
   button:
-    text: Apply
+    text: Applications Closed
     url: https://www.surveymonkey.com/r/HMR9KPD
   items:
       - image: assets/images/banners/home_1.jpg
