added link to alumni page and updated with 2017 program roster and one new school

--- a/_pages/index/_alumni-quotes.html
+++ b/_pages/index/_alumni-quotes.html
@@ -6,5 +6,8 @@
         </div>
 
         <div id="quotebook" class="quotebook css-table row"></div>
+        <div class="container" style="text-align: center">
+            <a class="btn btn-primary" href="alumni" target="_self" role="button"> View Our Past Alumni! </a>
+        </div>
     </div>
 </section>
