--- a/_pages/index/_program-overview.html
+++ b/_pages/index/_program-overview.html
@@ -5,11 +5,13 @@
             <h3>Learn lean start-up methods, coding, UI/UX, &amp; leadership skills</h3>
         </div>
 
+        {% comment %}
         <div class="movie-theater">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Ckdvl3x50UY?rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XXXXXXXXXXX?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
+        {% endcomment %}
 
         <div class="canvas">
             <div class="row">
