Remove mentions of 2019 program

--- a/_pages/index/_summer-program.html
+++ b/_pages/index/_summer-program.html
@@ -1,8 +1,8 @@
 <section class="summer-program page-section">
     <div class="container">
         <div class="section-header">
-            <h2>2019 Summer Program</h2>
-            <h3>Summer Program 06/17/19 - 07/26/19</h3>
+            <h2>Summer Plans</h2>
+            <h3>Being Productive During Summer Vacation</h3>
         </div>
 
         <div class="section-spacer">
