--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -2,11 +2,11 @@
 layout: jumbotron-header
 permalink: /
 jumbotron:
-  text: >
-    ## Summer 2019
-  button:
-    text: Applications Closed
-    url: https://www.surveymonkey.com/r/HMR9KPD
+  #text: >
+  #  ## Summer 2019
+  #button:
+  #  text: Applications Closed
+  #  url: https://www.surveymonkey.com/r/HMR9KPD
   items:
       - image: assets/images/banners/home_1.jpg
         position:
@@ -47,7 +47,7 @@ jumbotron:
     {% include_relative _program-partners.html %}
     {% include_relative _summer-program.html %}
     {% include_relative _eligibility.html %}
-    {% include_relative _application-process.html %}
+    {% comment %}{% include_relative _application-process.html %}{% endcomment %}
     {% include_relative _upcoming-events.html %}
     {% include_relative _program-statistics.html %}
     {% include_relative _alumni-quotes.html %}
